estructura de la cabecera

--- a/prueba.html
+++ b/prueba.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div id= "cabecera">
+        Cabecera :)
+    </div>
     <h1>hola</h1>
 </body>
 </html>
